# Detect

./: CMakeLists.txt  CMakeLists.txt.user.141cad0.4.10-pre1  README.md  conf.xml  data.txt
sdk64/include/: IUlirNetDevSDK.h  TempAlgSDK.h
src/: fire_dec.cpp  fire_dec.h  flash_dec.cpp  flash_dec.h  heat_dec.cpp  heat_dec.h  water_seepage_dec.cpp  water_seepage_dec.h
src/doc/: fire_dec.txt  flash_dec.txt  heat_dec.txt  water_seepage_dec.txt  时序管理类文档.txt
src/example/: main_detect.cpp  main_fire.cpp  main_flash.cpp  main_heat.cpp  main_water.cpp
src/lib/: capture.cpp  capture.h  temporaldatam.cpp  temporaldatam.h
testpic/uv/: 20190706091258.avi  20190706091612.avi  很近.avi
testpic/water_and_heat/: data.txt
testpic/紫外/: good.avi  红.avi
